--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -42,8 +42,9 @@
     background-color: #ffffff!important;
     border-radius: 30px!important;
     color: #f42c37!important;
-    margin-top: 2% !important;
+    margin: 2% !important;
     padding: 1.2% !important;
+    width: 100px!important;
 }
 .img{
     height: 600px;
@@ -251,7 +252,7 @@ table td {
 
 .outer {
 	position: relative;
-	height: 350px;
+	height: 270px;
 	width: 550px;
 	overflow: hidden;
 	display: flex;
@@ -260,7 +261,7 @@ table td {
 
 #img1 {
 	position: absolute;
-	top: -50px;
+	top: -90px;
 	right: -100px;
 	z-index: 0;
 	animation-delay: 0.5s;
@@ -269,7 +270,8 @@ table td {
 .content {
 	animation-delay: 0.3s;
 	position: absolute;
-	left: 20px;
+    top: 6px;
+	left: 30px;
 	z-index: 3
 }
 
