--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -41,7 +41,6 @@
 #btn1 {
     background-color: #ffffff!important;
     border-radius: 30px!important;
-    color: #f42c37!important;
     margin: 2% !important;
     padding: 1.2% !important;
     width: 100px!important;
@@ -113,13 +112,13 @@
     margin-left:3%;
     height: 23em !important;
     padding: 11% 4% 4% 2.5%;
-    background-color: #f8bf24;
+    background-color: #1479ff;
 }
 .sub4{
     font-size: 44px;
     line-height: 18px;
     font-weight: 900;
-    color: #ffd76a;
+    color: #3a98ff;
 }
 
 .img2{
@@ -191,6 +190,12 @@
     margin: 5% 0 0 22% ;
 }
 
+.img5{
+    height: auto;
+    width: 25%;
+    position: absolute;
+    margin: 14% 0 0 78% ;
+}
 /*card 6*/
 .card6{
      margin-top: 2%;
@@ -230,16 +235,17 @@ table {
 }
 
 table td {
-    padding: 5px;
+    padding: 10px;
 }
 
 .inner_table td:nth-child(2) {
-    padding-right: 200px;
+    padding-right: 100px;
 }
 
 .promotion_cards {
-    margin: 0px 50px;
-    border-radius: 6%;
+    margin: 20px 10%;
+    border-radius: 3%;
+    width: 80%;
 }
 
 .wrapper {
@@ -261,16 +267,27 @@ table td {
 
 #img1 {
 	position: absolute;
-	top: -90px;
-	right: -100px;
+	top: -100px;
+	right: -210px;
 	z-index: 0;
 	animation-delay: 0.5s;
+    width: 610px;
+    height: 470px;
+}
+
+#img2 {
+	position: absolute;
+	top: -90px;
+	right: -75px;
+	z-index: 0;
+	animation-delay: 0.5s;
+    width: 430px;
+    height: 450px;
 }
 
 .content {
 	animation-delay: 0.3s;
 	position: absolute;
-    top: 6px;
 	left: 30px;
 	z-index: 3
 }
@@ -317,15 +334,47 @@ input[type="submit"] {
     }
 }
 
+@media screen and (max-width: 738px) {
+    .inner_table td:nth-child(2) {
+        padding-right: 50px;
+    }
+}
+
+@media screen and (max-width: 638px) {
+    .inner_table td:nth-child(2) {
+        padding-right: 25px;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .bestSellerCard {
         margin:0% 22%!important;
     }
 }
 
+@media screen and (max-width: 588px) {
+    .inner_table td:nth-child(2) {
+        padding-right: 13px;
+    }
+}
+
+@media screen and (max-width: 563px) {
+    .inner_table td:nth-child(2) {
+        font-size: 13px;
+        padding-right: 7px;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .bestSellerCard {
         margin:0% 15%!important;
+    }
+}
+
+@media screen and (max-width: 489px) {
+    .inner_table td:nth-child(2) {
+        font-size: 12px;
+        padding-right: 4px;
     }
 }
 
