--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -59,7 +59,7 @@
     border-radius: 20px;
     box-sizing: border-box;
     hyphens: manual;
-    width: 23%;
+    width: 339px;
     margin-left:3%;
     height: 23em !important;
     padding: 11% 4% 4% 2.5%;
@@ -108,7 +108,7 @@
     border-radius: 20px;
     box-sizing: border-box;
     hyphens: manual;
-    width: 23%;
+    width: 339px;
     margin-left:3%;
     height: 23em !important;
     padding: 11% 4% 4% 2.5%;
@@ -123,7 +123,7 @@
 
 .img2{
     position: absolute;
-    margin: 2% 0 0 29% ;
+    margin: 5% 0 0 32% ;
 }
 
 /*card 4*/
@@ -133,7 +133,7 @@
     border-radius: 20px;
     box-sizing: border-box;
     hyphens: manual;
-    width: 42%;
+    width: 570px;
     margin-left:3%;
     height: 23em !important;
     padding: 11% 4% 4% 2.5%;
@@ -243,8 +243,8 @@ table td {
 }
 
 .promotion_cards {
-    margin: 20px 10%;
-    border-radius: 3%;
+    margin: 2% 10%;
+    border-radius: 20px;
     width: 80%;
 }
 
