--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -1,22 +1,25 @@
-#contact_info * {
-    margin: 10px 0px;
+.main_contact {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
 }
 
-#contact_form input[type="text"],
-#contact_form input[type="email"],
-#contact_form textarea {
-    width: 80%;
-    height: 30px;
-    border-radius: 25px;
-    background-color: #efefef;
-    margin: 10px 10px;
+.right_contact img {
+    width: 45vw;
 }
 
-input[type="submit"] {
-    width: 30%!important;
-    height: 35px!important;
-    background-color: #f42c37;
-    border-radius: 10px;
-    margin: 0px 25%!important;
-    color: white;
+@media screen and (max-width: 805px) {
+    .main_contact {
+        flex-direction: column-reverse;
+    }
+    .right_contact img {
+        /* display: inline-block; */
+        display: flex;
+        justify-content: center;
+        width: 95vw;
+        margin-left: 2vw!important;
+    }
+    .left_contact {
+        margin: 20px;
+    }
 }
