--- a/src/component/Nav.css
+++ b/src/component/Nav.css
@@ -1,5 +1,7 @@
+
 .nav{
     box-shadow: none!important;
-    margin-top: 1% !important;
-
+    background-color: white !important;
+    margin-top: 1%!important;
+    color: black!important;
 }
