--- a/src/Pages/Shop/Shop.css
+++ b/src/Pages/Shop/Shop.css
@@ -5,16 +5,37 @@
     text-align: center;
 }
 
-.header h2 {
-    padding: 30px;
+.main_shop {
+    display: flex;
+    justify-content: space-around;
 }
 
-#ip2 {
-    width: 180px!important;
-    height: 50px;
-    padding-right: 50px;
-    border-radius: 25px;
-    width: 200px;
+.categories_wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 25vw;
+}
+
+.card {
+    margin-top: 10px;
+}
+
+.textField {
+    display: flex;
+    justify-content: center;
+}
+
+.left {
+    width: 29vw;
+}
+
+.right {
+    width: 69vw;
+}
+
+
+.header h2 {
+    padding: 30px;
 }
 
 #search {
@@ -30,7 +51,7 @@
 }
 
 #filter {
-    margin: 20px;
+    margin: 0 auto;
     display: block;
     width: 80%;
     height: 45px;
@@ -43,14 +64,25 @@
     margin-right: 10px!important;
 }
 
-@media screen and (min-width: 1070px) and (max-width:1280px) {
-    #ip2 {
-        width: 150px!important;
-    }
-}
 
-@media screen and (min-width: 960px) and (max-width:1070px) {
-    #ip2 {
-        width: 200px!important;
+
+@media screen and (max-width:885px) {
+    .left,.right {
+        width: 95vw!important;
+    }
+    .main_shop {
+        flex-direction: column-reverse;
+    }
+    .categories_wrapper h3 {
+        margin-left: 10px!important;
+    }
+    .categories_wrapper {
+        width: 95vw!important;
+    }
+    .textField input {
+        width: 75vw;
+    }
+    .textField button {
+        width: 5vw;
     }
 }
