made Changes in Contact and About
made Changes in Contact and About

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 770px) {
     .main_about {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .right_about img {
         /* display: inline-block; */
