made checkout page
made checkout page

--- a/src/Pages/Cart/styles.css
+++ b/src/Pages/Cart/styles.css
@@ -12,6 +12,17 @@
     color: white;
 }
 
+.shopLink {
+    display: flex;
+    justify-content: center;
+}
+
+.shopLink button {
+    background-color: #DFDCDE;
+    color: #515151;
+    font-weight: bold;
+}
+
 @media (max-width: 665px) {
     .totalAmountSection {
         justify-content: space-around!important;
