--- a/src/Pages/Shop/Shop.css
+++ b/src/Pages/Shop/Shop.css
@@ -27,6 +27,7 @@
 
 .left {
     width: 29vw;
+    border-right: 1px solid black;
 }
 
 .right {
@@ -62,9 +63,18 @@
 
 .productCard {
     margin-right: 10px!important;
+    position: relative;
 }
 
-
+.addBtn {
+    border-radius: 50px!important;
+    background-color: #F42C37!important;
+    color: white!important;
+    /* font-size: 25px!important; */
+    position: absolute!important;
+    bottom: 10px;
+    right: 10px;
+}
 
 @media screen and (max-width:885px) {
     .left,.right {
