Shop,Login,Register and Profile Page Updated
Shop,Login,Register and Profile Page Updated

--- a/src/component/Register/Register.css
+++ b/src/component/Register/Register.css
@@ -1,36 +1,7 @@
-.signPera{
-    font-size: 10px;
-    text-align: left;
-}
-
-.checkSpan{
-    font-size: 11px;
-    /* line-height: 0%; */
-}
-
-.divCheck{
-    /* border: 1px solid red; */
-    text-align: left;
-}
-.emailGrid-Div{
-    text-align: left;
-}
-
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-    .emailGridDiv{
-        /* left: 25%; */
-        /* margin-right: 20%; */
-        /* border: 2px solid green !important; */
-        width: 100% !important;
-        /* align-items: center; */
+@media only screen and (max-width: 580px) {
+    
+    .controlInput {
+        width: 100%!important;
     }
-    .datePick{
-        margin-left: 20%;
-        width: 100%;
-        /* text-align: center !important; */
-        /* border: 2px solid green; */
-    }
-    .Gender{
-        margin-left: 34%;
-    }
+    
 }
